crates/weft-snapshots/tests/snapshots/a2ui-import/corpus-settings.snap
---
source: crates/weft-snapshots/tests/interop.rs
description: corpus-settings as a2ui-import
---
<screen id="settings" weft="0.2">
  <heading id="title" level="1">Settings</heading>
  <section id="notifications" label="Notifications">
    <stack id="notifications-body">
      <heading id="notifications-title" level="2">Notifications</heading>
      <checkbox id="email-alerts" checked="{$.emailAlerts}" label="Email alerts"/>
      <checkbox id="push-alerts" checked="{$.pushAlerts}" label="Push notifications"/>
    </stack>
  </section>
  <section id="appearance" label="Appearance">
    <stack id="appearance-body">
      <heading id="appearance-title" level="2">Appearance</heading>
      <select id="language" label="Language" value="{$.language}">
        <option id="option-english" value="en">English</option>
        <option id="option-deutsch" value="de">Deutsch</option>
        <option id="option-francais" value="fr">Français</option>
      </select>
      <checkbox id="dark-mode" checked="{$.darkMode}" label="Dark mode"/>
    </stack>
  </section>
  <button id="save" disabled="{!$.dirty}" variant="primary" on-press="settings.save">Save changes</button>
</screen>
