crates/weft-snapshots/tests/snapshots/a2ui-import/corpus-todo-list.snap
---
source: crates/weft-snapshots/tests/interop.rs
description: corpus-todo-list as a2ui-import
---
<screen id="todos" weft="0.2">
  <heading id="title" level="1">Tasks</heading>
  <stack id="add-form">
    <stack id="add-row" direction="row">
      <field id="draft" label="New task" value="{$.draft}"/>
      <button id="add" disabled="{!$.draft}" variant="primary" on-press="todo.add">Add</button>
    </stack>
  </stack>
  <list id="list">
    <each id="each-1" as="item" in="{$.todos}">
      <item id="item-1">
        <stack id="todo">
          <checkbox id="todo-done" checked="{$item.done}" label="{$item.title}"/>
          <button id="todo-remove" on-press="todo.remove">Remove</button>
        </stack>
      </item>
    </each>
  </list>
  <text id="remaining" text="{$.remainingLabel}"/>
</screen>
